# cigate

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  action.yml  evalconfig.yaml  evalconfig_cuad.yaml  evalconfig_realdemo.yaml  pyproject.toml
.cigate/: baseline.json  baseline_cuad.json  baseline_realdemo.json
.github/workflows/: ci.yml  eval-gate.yml  nightly.yml  pypi.yml
dashboard/: app.py
data/cuad/: ATTRIBUTION.md  cuad_subset.json
docs/: ARCHITECTURE.md  ARTICLE.md  DEMO_SCRIPT.md  METHODOLOGY.md  PUBLISHING.md  RESULTS.md  TESTING.md  social.md
docs/results/: cuad_calibration_real.json  real_good_report.md  real_good_summary.json  real_regressed_report.md  real_regressed_summary.json
docs/samples/: auditor_pack.md  calibration.json  pr_comment_clean.md  pr_comment_regressed.md
examples/pr-improvement/: README.md
examples/pr-regression/: README.md
goldensets/: cuad_calibration.yaml  cuad_real.yaml  holdout_calibration.yaml  realdemo_calibration.yaml  realdemo_golden.yaml  synthetic_contract.yaml
goldensets/corpus/: auto-cancellation-001.md  auto-claims-process-001.md  auto-collision-deductible-001.md  auto-comprehensive-deductible-001.md  auto-exclusions-001.md  auto-gap-rider-001.md  auto-liability-limit-001.md  auto-premium-001.md  auto-renewal-001.md  auto-roadside-rider-001.md  health-claims-process-001.md  health-copay-001.md  health-coverage-limit-001.md  health-deductible-001.md  health-exclusions-001.md  health-out-of-pocket-max-001.md  health-premium-001.md  health-prescription-rider-001.md  health-waiting-period-001.md  (+31 more)
scripts/: demo.sh  make_realdemo_data.py  real_eval.sh  try_local.sh
tests/: test_cli.py  test_end_to_end.py  test_evaluators.py  test_stats.py
(+85 files in other folders)
