[project]
name = "cigate"
version = "0.1.0"
description = "Eval-gated CI/CD for AI products: gate merges on the confidence-interval lower bound of a bias-corrected LLM-judge score, per failure-mode axis."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Abhinandan" }]
keywords = ["llm", "evaluation", "llm-as-judge", "ci-cd", "rag", "regression-testing", "evals"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2,<3",
    "pyyaml>=6",
    "numpy>=1.24",
    "rank-bm25==0.2.2",
    "scipy>=1.10",
]

[project.optional-dependencies]
real = ["anthropic>=0.40"]          # real Claude generation + judge (mock works without this)
dashboard = ["streamlit>=1.30", "pandas>=2", "altair>=5"]
crosscheck = ["judgy>=0.1"]         # optional: cross-check our analytic CI against judgy's bootstrap
dev = ["pytest>=8", "pytest-cov>=4", "ruff>=0.4"]

[project.scripts]
cigate = "cigate.cli:main"

[project.urls]
Homepage = "https://github.com/awesome-pro/cigate"
Repository = "https://github.com/awesome-pro/cigate"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cigate", "src/refbot"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
src = ["src"]
